--- a/exam/package.json
+++ b/exam/package.json
@@ -15,6 +15,7 @@
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
     "global": "^4.4.0",
+    "socket.io-client": "^4.8.1",
     "vis": "^4.21.0",
     "vue": "^2.5.2",
     "vue-cookies": "^1.5.12",
@@ -23,8 +24,6 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "less": "^4.1.3",
-    "less-loader": "5.0.0",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "autoprefixer": "^7.1.2",
@@ -43,6 +42,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^4.1.3",
+    "less-loader": "5.0.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
